--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "@types/react-icons": "^3.0.0",
+    "@types/react-redux": "^7.1.24",
     "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-redux": "^8.0.2",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
